<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">
    <LinearLayout
        android:id="@+id/summary_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/summary_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/summary_title"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#bebebe" />
        <TextView
            android:id="@+id/summary_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
/>
    </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/summary_layout"
        android:layout_marginTop="6dp"
        android:layout_centerHorizontal="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#bebebe" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center">

            <Button
                android:id="@+id/time_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recording_time" />
            <TextView
                android:id="@+id/time_limit_exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/recording_time_exp"
                android:gravity="center_horizontal"
                />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#bebebe" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center">

            <Button
                android:id="@+id/save_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_location" />
            <TextView
                android:id="@+id/save_location_exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save_location_exp"
                android:gravity="center_horizontal"
                />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#bebebe" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center">

            <Button
                android:id="@+id/bit_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bit_rate" />
            <TextView
                android:id="@+id/bit_rate_exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bit_rate_exp"
                android:gravity="center_horizontal"
                />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#bebebe" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center">

            <Button
                android:id="@+id/rotate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rotate" />
            <TextView
                android:id="@+id/rotate_exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rotate_exp"
                android:gravity="center_horizontal"
                />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#bebebe" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center">

            <Button
                android:id="@+id/video_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_size" />
            <TextView
                android:id="@+id/video_size_exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/video_size_exp"
                android:gravity="center_horizontal"
                />
        </TableRow>
    </TableLayout>
</RelativeLayout>